# Ubuntu-to-Raspberry-PI-Cross-Compile-and-Debug-using-Eclipse-

./: .gdbinit  CMakeLists.txt  README.md
cmake/: CMakeLists.txt  aarch64-rpi3-linux-gnu.cmake
include/: global_main.h
odas/: CMakeLists.txt  README.md  respeaker_4_mic_array.cfg
src/: main.cpp
src/common/images/: content.txt
